--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
 	<a href="{{ site.baseurl }}">
-		<img src="{{ "img/emerald.svg" | prepend: site.baseurl }}" alt="Emerald Logo">
-	  <h1>emerald</h1>
+		<img src="{{ "https://tronplace.com/css/big_green.jpg" width="200px" height="200px" | prepend: site.baseurl }}" alt="Emerald Logo">
+	  <h1>TronPlace Blog</h1>
 	</a>
 </header>
