--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
 	<a href="{{ site.baseurl }}">
-		<img src="{{ "https://tronplace.com/css/big_green.jpg" width="200px" height="200px" | prepend: site.baseurl }}" alt="Emerald Logo">
+		<img src="{{ "https://tronplace.com/css/big_green.jpg" | prepend: site.baseurl }}" width="200" height="200" alt="TronPlace Logo">
 	  <h1>TronPlace Blog</h1>
 	</a>
 </header>
