--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,22 +3,22 @@
 		<a href="{{ site.baseurl }}">Home</a>
 
 		<!-- Nav pages -->
-	  {% for page in site.pages %}
+	<!--  {% for page in site.pages %}
 	    {% if page.layout == "page" %}
 	      <a href="{{ site.baseurl }}{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a>
 	    {% endif %}
 	  {% endfor %}
     
     <!-- Nav links -->
-	  {% include link.html %}
+	 <!-- {% include link.html %}
 
 	</div>
   
   <!-- Nav footer -->
-	{% if site.custom_nav_footer == true %}
+	<!--{% if site.custom_nav_footer == true %}
 	  {% include nav-footer-custom.html %}
 	{% else %}
 	  {% include nav-footer.html %}
-	{% endif %}
+	{% endif %} -->
 
 </nav>
